Removed Calculator.razor, stylying, calculator nav

--- a/WebCalculator/Pages/SimpleCalculator.razor
+++ b/WebCalculator/Pages/SimpleCalculator.razor
@@ -14,12 +14,10 @@
         <br><br>
         <input type="button" value="DELETE" onclick="simpleCalc.display.value=''" id="del">
     </form>
-
-
 </div>
 @code {
-    private string num1 = "0";
-    private string num2 = "0";
+    private string num1 = "";
+    private string num2 = "";
     private string opp = "+";
     private string display = "0";
 
